@@ -1,5 +1,9 @@
 2007-02-02  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
+	* test/unit/hash_test.cpp: add test for hash_multimap, equivalent
+	keys problem on some data sets [this is regression test, suggested
+	by tef for 5.0.2, bug report #1606308].
+
 	* Repository: following records are merge from 5.1 branch
 	[see record 2006-06-29 by Francois Dumont in 5.1];
 	
